# epstractor

./: .gitignore  Makefile  README.md  RENAME_INSTRUCTIONS.md  UPLOAD_WORKFLOW.md  main.py  pyproject.toml
downloads/: __init__.py  cli.py  dedupe.py
downloads/configs/: epstein_estate_2025_09.yaml  epstein_estate_2025_11.yaml  house_doj_2025_09.yaml
examples/: load_external_files.py  load_large_files.py  load_subsets.py
huggingface/: filter_parquet.py  rename_train_to_data.py  to_parquet.py  update_readme.py  upload_dataset.py  validate_dataset.py
huggingface/datasets/configs/: epstein_all.yaml
huggingface/datasets/epstractor/: README.md
src/: download.py
