[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epstractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.154.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "rich>=13.7.1",
]

[project.scripts]
download-datasets = "downloads.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "downloads"]

[dependency-groups]
dev = [
    "datasets>=4.4.1",
    "pillow>=12.0.0",
    "pypdf>=6.3.0",
    "ruff>=0.14.5",
]
